--- a/_posts/principle/2021-10-28-12-factor.md
+++ b/_posts/principle/2021-10-28-12-factor.md
@@ -14,7 +14,7 @@ Nguồn: [12factor.net](https://12factor.net/)
 - Một codebase được quản lý bởi một source control như Git, Subversion,... và có thể deploy nhiều nơi
 
 <div align="center">
-    <img src="../assets/images/principle/12factor/codebase-deploys.png"/>
+    <img src="/assets/img/principle/12factor/codebase-deploys.png"/>
 </div>
 
 ### II. Dependencies
