--- a/_posts/principle/2021-10-28-12-factor.md
+++ b/_posts/principle/2021-10-28-12-factor.md
@@ -32,13 +32,13 @@ Nguồn: [12factor.net](https://12factor.net/)
 - Xem các backing service đi kèm như database, messaging... là resouce của ứng dụng, không có sự khác biệt khi sử dụng resouce local, cloud hay bên thứ 3.
 
 <div align="center">
-    <img src="../assets/images/principle/12factor/attached-resources.png"/>
+    <img src="/assets/img/principle/12factor/attached-resources.png"/>
 </div>
 
 ### V. Build, release, run
 
 <div align="center">
-    <img src="../assets/images/principle/12factor/build_release_run.png"/>
+    <img src="/assets/img/principle/12factor/build_release_run.png"/>
 </div>
 
 - Tách biệt quá trình build, release và run.
