--- a/_posts/theory/2021-10-28-CAP.md
+++ b/_posts/theory/2021-10-28-CAP.md
@@ -22,7 +22,7 @@ categories: [Theory]
     - CA: Nếu muốn hệ thống hoạt động bình thường và dữ liệu nhất quán thì khi một node có vấn đề hệ thống cần chuyển qua hoạt động trên node khác, vậy nên nếu đường mạng có vấn đề thì hệ thống lúc này toàn toàn không hoạt động được (P)
 
 <div align="center">
-    <img src="../assets/images/theory/CAP.png"/>
+    <img src="/assets/img/theory/CAP.png"/>
 </div>
 
 - Tổng kết: hệ thống phân tấn trong thực tế thường chọn 2 yếu tố avaibility (A) và partition tolerance (P), và eventually consistency (tính nhất quán có độ trễ) thay cho consistency
