--- a/_posts/principle/2021-10-28-12-factor.md
+++ b/_posts/principle/2021-10-28-12-factor.md
@@ -3,6 +3,7 @@ layout: post
 title: 12 Factor
 date: 2021-11-08 10:00:20 +0700
 description: Giải thích sơ về 12 Factor
+img: principle/12factor/icon.png
 tags: [Principle]
 categories: [Principle]
 ---
