--- a/_posts/theory/2021-10-28-CAP.md
+++ b/_posts/theory/2021-10-28-CAP.md
@@ -3,6 +3,7 @@ layout: post
 title: CAP
 date: 2021-10-29 10:00:20 +0700
 description: Giải thích định lý CAP
+img: theory/CAP.png
 tags: [Theory]
 categories: [Theory]
 ---
