--- a/_posts/spring-boot/2021-11-27-xds.md
+++ b/_posts/spring-boot/2021-11-27-xds.md
@@ -8,6 +8,8 @@ tags: [Spring Boot, Service Discovery]
 categories: [Spring Boot]
 ---
 
+> Some documents about Service Discovery for gRPC services by xDS protocol
+
 ## Reference
 - https://github.com/envoyproxy/java-control-plane
 - https://github.com/envoyproxy/go-control-plane
