Apply new tab on linked

--- a/_posts/principle/2021-10-28-12-factor.md
+++ b/_posts/principle/2021-10-28-12-factor.md
@@ -8,7 +8,7 @@ tags: [Principle]
 categories: [Principle]
 ---
 
-Nguồn: [12factor.net](https://12factor.net/)
+Nguồn: [12factor.net](https://12factor.net/){:target="_blank"}
 
 ### I. Codebase
 
