--- a/_posts/spring-boot/2021-11-27-xds.md
+++ b/_posts/spring-boot/2021-11-27-xds.md
@@ -3,7 +3,7 @@ layout: post
 title: Spring Boot - xDS
 date: 2021-08-26 10:00:20 +0700
 description: Service discovery for gRPC service with xDS
-img: spring_boot/spring_boot_xds.png
+img: spring_boot/xds.png
 tags: [Spring Boot, Service Discovery]
 categories: [Spring Boot]
 ---
