--- a/_posts/spring-cloud/2021-11-20-sleuth.md
+++ b/_posts/spring-cloud/2021-11-20-sleuth.md
@@ -25,7 +25,7 @@ source: https://github.com/huypva/spring-cloud-sleuth-example
     
 - Thêm dependency [spring-cloud-starter-sleuth][1] trong mỗi service
 
-```xml
+{% highlight xml %}
 <properties>
     <spring-cloud.version>2020.0.4</spring-cloud.version>
 </properties>
@@ -50,7 +50,7 @@ source: https://github.com/huypva/spring-cloud-sleuth-example
         </dependency>
     </dependencies>
 </dependencyManagement>
-```
+{% endhighlight %}
 
 ## Service A  
 
@@ -58,7 +58,7 @@ source: https://github.com/huypva/spring-cloud-sleuth-example
     - [spring-cloud-starter-openfeign][2]: http client
     - [grpc-spring-boot-starter][3]: grpc client 
     
-```xml
+{% highlight xml %}
 <properties>
     <net.devh.grpc.starter.version>2.12.0.RELEASE</net.devh.grpc.starter.version>
 </properties>
@@ -77,24 +77,24 @@ source: https://github.com/huypva/spring-cloud-sleuth-example
         <artifactId>brave-instrumentation-grpc</artifactId>
     </dependency>
 </dependencies>
-```
+{% endhighlight %}
 
 Mặc định OpenFeign tích hợp sẵn sleuth, còn với gRPC cần sử dụng thêm dependency [brave-instrumentation-grpc][4]
 
 - Cấu hình sleuth trong application.yml
 
-```yaml
+{% highlight yaml %}
 spring:
   sleuth:
     propagation:
       type: B3 #,W3C
     sampler:
       probability: 1.0
-```
+{% endhighlight %}
 
 - Cấu hình service B và C trong application.yml
 
-```yaml
+{% highlight yaml %}
 serviceb:
   url: http://localhost:8082
   path:
@@ -106,11 +106,11 @@ grpc:
       enableKeepAlive: true
       keepAliveWithoutCalls: true
       negotiationType: plaintext
-```
+{% endhighlight %}
 
 - Sử dụng FeignClient để tạo HTTP client gọi đến ServiceB 
     
-```java
+{% highlight java %}
 @FeignClient(value = "serviceb", url = "${serviceb.url}")
 public interface ServiceBClient {
 
@@ -118,11 +118,11 @@ public interface ServiceBClient {
   public MessageB greet(@PathVariable(name = "id") int userId);
 
 }
-```
+{% endhighlight %}
 
 - Viết gRPC client gọi đến ServiceC
 
-```java
+{% highlight java %}
 import net.devh.boot.grpc.client.inject.GrpcClient;
 ...
   @GrpcClient("servicec")
@@ -137,20 +137,20 @@ import net.devh.boot.grpc.client.inject.GrpcClient;
     GreetResponse response = this.serviceCBlockingStub.greet(request);
     return new MessageC(response.getMessage());
   }
-```
+{% endhighlight %}
 
 ## Service B
 
 - Cấu hình port HTTP
 
-```yaml
+{% highlight yaml %}
 server:
   port : 8082
-```
+{% endhighlight %}
 
 - Viết Rest controller đơn giản
 
-```java
+{% highlight java %}
 @RestController
 public class Controller {
 
@@ -160,21 +160,21 @@ public class Controller {
     return new MessageB("MessageB greet " + id);
   }
 }
-```
+{% endhighlight %}
 
 ## ServiceC
 
 - Cấu hình port gRPC trong file application.yml
 
-```yaml
+{% highlight yaml %}
 grpc:
   server:
     port: 8183
-```
+{% endhighlight %}
 
 - Viết gRPC controller
 
-```java
+{% highlight java %}
 import net.devh.boot.grpc.server.service.GrpcService;
 ...
 @GrpcService
@@ -190,9 +190,8 @@ public class GrpcController extends ServiceCGrpc.ServiceCImplBase {
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
-
 }
-```
+{% endhighlight %}
 
 ## Test sleuth
 
@@ -200,73 +199,77 @@ public class GrpcController extends ServiceCGrpc.ServiceCImplBase {
 
 - Gửi request test đến ServiceA, trong ServiceA sẽ gọi đến ServiceB
 
-```shell
+{% highlight shell %}
 $ curl http://localhost:8081/greetb/1
-```
+{% endhighlight %}
 
-Log service A:
-```text
+Log service A
+{% highlight text %}
 2021-11-20 21:01:03.834  INFO [service-A,48c90d4d61668476,48c90d4d61668476] 2433 --- [nio-8081-exec-1] i.c.servicea.entrypoint.Controller       : ServiceA.greetB
-```
+{% endhighlight %}
+
 và service B
-```text
+{% highlight text %}
 2021-11-20 21:01:03.939  INFO [service-B,48c90d4d61668476,c73d7b8f5c34adc6] 2429 --- [nio-8082-exec-1] i.c.serviceb.entrypoint.Controller       : ServiceB.greet
-```
+{% endhighlight %}
+
 chung TraceId 48c90d4d61668476
 
 - Gửi request test đến ServiceA, trong ServiceA sẽ gọi đến ServiceC
 
-```shell
+{% highlight shell %}
 $ curl http://localhost:8081/greetc/1
-```
+{% endhighlight %}
 
 Log service A:
-```text
+{% highlight text %}
 2021-11-20 21:02:54.170  INFO [service-A,9b6f0e1e5e5ca2da,9b6f0e1e5e5ca2da] 2433 --- [nio-8081-exec-2] i.c.servicea.entrypoint.Controller       : ServiceA.greetC
-```
+{% endhighlight %}
+
 và service C
-```text
+{% highlight text %}
 2021-11-20 21:02:54.340  INFO [service-C,9b6f0e1e5e5ca2da,9cd977fdc2849bb4] 2100 --- [ault-executor-2] i.c.servicec.entrypoint.GrpcController   : ServiceC.greet 1
-```
+{% endhighlight %}
+
 chung TraceId 9b6f0e1e5e5ca2da
 
 ## Report lên Zipkin, Jaeger
 
 - Setup Zipkin bằng docker-compose
 
-```yaml
+{% highlight yaml %}
 version: "3.4"
 services:
   zipkin:
     image: openzipkin/zipkin
     ports:
       - 9411:9411
-```
+{% endhighlight %}
 
 Run docker-compose
 
-```shell script
+{% highlight shell %}
 docker-compose up -d
-```
+{% endhighlight %}
 
 - Trong mỗi service, thêm thông tin dependency 
 
-```xml
+{% highlight xml %}
 <dependencies>
     <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-sleuth-zipkin</artifactId>
     </dependency>
 </dependencies>
-```
+{% endhighlight %}
 
 - Thêm cấu hình zipkin trong application.yml
 
-```
+{% highlight yaml %}
 spring:
   zipkin:
     base-url: http://localhost:9411
-```
+{% endhighlight %}
 
 - Send request và mở Zipkin UI tại địa chỉ <http://localhost:9411/> lên xem report
 <div align="center">
@@ -279,7 +282,7 @@ spring:
 - Ngoài ra, có thể sử dụng Jeager server để hiện thị report
     - Setup Jeager server bằng docker-compose và cho phép nhận report theo format của zipkin
     
-```yaml
+{% highlight yaml %}
 version: "3.4"
 services:
   jaeger:
@@ -295,7 +298,7 @@ services:
       - 9411:9411
     environment:
       - COLLECTOR_ZIPKIN_HTTP_PORT=9411
-```
+{% endhighlight %}
 
 Test và xem kết quả trên Jeager UI tại địa chỉ <http://localhost:16686/>
 
