--- a/_posts/java/2021-08-26-map.md
+++ b/_posts/java/2021-08-26-map.md
@@ -11,7 +11,7 @@ source: https://github.com/huypva/map-example
 
 - Khởi tạo và sử dụng *HashMap* 
 
-```java
+{% highlight java %}
     Map<Integer,String>  map = new HashMap<>();
     map.put(1, "a");
     map.put(11111, "a1");
@@ -24,11 +24,11 @@ source: https://github.com/huypva/map-example
     for (Map.Entry<Integer,String> entry : map.entrySet()) {
       System.out.println("Entry <"+ entry.getKey() +"," + entry.getValue() +">");
     }
-``` 
+{% endhighlight %} 
 
 Output:
 
-```text
+{% highlight text %}
 HashMap
 Entry <1,a>
 Entry <2,b>
@@ -36,13 +36,13 @@ Entry <3,c>
 Entry <11111,a1>
 Entry <333,c3>
 Entry <2222,b2>
-```
+{% endhighlight %}
 
 > Thứ tự khi duyệt *HashMap* sẽ tùy thuộc vào giải thuật của nó
 
 - *LinkedHashMap* sắp xếp các phần tử theo thứ tự insert.
 
-```java
+{% highlight java %}
     Map<Integer,String>  map = new LinkedHashMap<>();
     map.put(1, "a");
     map.put(11111, "a1");
@@ -55,22 +55,22 @@ Entry <2222,b2>
     for (Map.Entry<Integer,String> entry : map.entrySet()) {
       System.out.println("Entry <"+ entry.getKey() +"," + entry.getValue() +">");
     }
-``` 
+{% endhighlight %} 
 
 Output:
 
-```text
+{% highlight text %}
 Entry <1,a>
 Entry <11111,a1>
 Entry <2,b>
 Entry <2222,b2>
 Entry <3,c>
 Entry <333,c3>
-```
+{% endhighlight %}
 
 - *TreeMap* sắp xếp thứ tự các phần tử dựa vào *key*
 
-```java
+{% highlight java %}
     Map<Integer,String>  map = new TreeMap<>();
     map.put(1, "a");
     map.put(11111, "a1");
@@ -83,11 +83,11 @@ Entry <333,c3>
     for (Map.Entry<Integer,String> entry : map.entrySet()) {
       System.out.println("Entry <"+ entry.getKey() +"," + entry.getValue() +">");
     }
-```
+{% endhighlight %}
 
 Output:
 
-```text
+{% highlight text %}
 TreeMap
 Entry <1,a>
 Entry <2,b>
@@ -95,4 +95,4 @@ Entry <3,c>
 Entry <333,c3>
 Entry <2222,b2>
 Entry <11111,a1>
-```` 
+{% endhighlight %}` 
