--- a/_posts/java/2021-10-03-stream.md
+++ b/_posts/java/2021-10-03-stream.md
@@ -25,23 +25,23 @@ Bao gồm:
 
 - Loại bỏ các phần tử giống nhau
 
-```java
+{% highlight java %}
   Stream<T> distinct();
-```
+{% endhighlight %}
 
 - Ví dụ:
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     numbers.stream()
         .distinct()
         .forEach(System.out::println);
-```
+{% endhighlight %}
 
 Output:
 
-```
+{% endhighlight %}
 1
 2
 4
@@ -49,19 +49,19 @@ Output:
 7
 5
 6
-```
+{% endhighlight %}
 
 ### filter()
 
 - Lọc các phần tử theo điều kiện
 
-```java
+{% highlight java %}
   Stream<T> filter(Predicate<? super T> predicate);
-```
+{% endhighlight %}
 
 - Ví dụ: Đếm các String null hoặc empty trong mảng
 
-```java
+{% highlight java %}
     List<String> strings = Arrays.asList("a", "", "b", "c", "ab", "", "ef");
 
     long count = strings.stream()
@@ -69,64 +69,64 @@ Output:
         .count();
 
     System.out.println("Number empty: " + count);
-```
+{% endhighlight %}
 
 Output: 
 
-```
+{% endhighlight %}
 Number empty: 2
-```
+{% endhighlight %}
 
 ### limit()/skip()
 
 - *limit* lấy các phần tử đầu tiên. *skip* bỏ các phần tử đầu tiên.
 
-```java
+{% highlight java %}
   Stream<T> limit(long maxSize);
   Stream<T> skip(long n);
-```
+{% endhighlight %}
 
 - Ví dụ: Print 5 phần tử đầu tiên của mảng
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     numbers.stream()
         .limit(5)
         .forEach(System.out::println);
-```
+{% endhighlight %}
 
 Output:
 
-```text
+{% highlight text %}
 1
 2
 4
 3
 7
-```
+{% endhighlight %}
 
 ### map() 
 
 - Ánh xạ phần tử sang kết quả khác
 
-```java
+{% highlight java %}
   <R> Stream<R> map(Function<? super T, ? extends R> mapper);
-```
+{% endhighlight %}
 
 - Ví dụ: Nhân 2 các giá trị trong mảng
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     numbers.stream()
         .map(i -> i*2)
         .forEach(System.out::println);
-```
+{% endhighlight %}
 
 Output: 
 
-```text
+{% highlight text %}
 2
 4
 8
@@ -136,29 +136,29 @@ Output:
 10
 4
 12
-```
+{% endhighlight %}
 
 ### sorted()
 
 - Sắp xếp các phần tử
 
-```java
+{% highlight java %}
     Stream<T> sorted();
-```
+{% endhighlight %}
 
 - Ví dụ: Sắp xếp theo thứ tự lớn đến nhỏ
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     numbers.stream()
         .sorted((x,y) -> y - x)
         .forEach(System.out::println);
-```
+{% endhighlight %}
 
 Output: 
 
-```text
+{% highlight text %}
 7
 6
 5
@@ -168,7 +168,7 @@ Output:
 2
 2
 1
-```
+{% endhighlight %}
 
 ## Terminal Operations
 
@@ -176,39 +176,39 @@ Output:
 
 - Kết hợp thành một Collection
 
-```java
+{% highlight java %}
     <R, A> R collect(Collector<? super T, A, R> collector);
-```
+{% endhighlight %}
 
 - Ví dụ: Tạo một List
 
-```java
+{% highlight java %}
     List<String> notEmptyList = strings.stream()
         .filter(string -> string != null && !string.isEmpty())
         .collect(Collectors.toList());
-```
+{% endhighlight %}
 
 
 ### forEach()
 
 - Duyệt và thao tác lên từng phần tử
 
-```java
+{% highlight java %}
     void forEach(Consumer<? super T> action);
-```
+{% endhighlight %}
 
 - Ví dụ: Println từng phần tử trong mảng
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     numbers.stream()
         .forEach(System.out::println);
-```
+{% endhighlight %}
 
 Output:
 
-```text
+{% highlight text %}
 1
 2
 4
@@ -218,74 +218,74 @@ Output:
 5
 2
 6
-```
+{% endhighlight %}
 
 ### anyMatch(), allMatch(), noneMatch()
 
 - *anyMatch* trả về `true` nếu có bất kỳ phần tử nào thỏa điều kiện, ngược lại `false`
 - *allMatch* kiểm tra tất cả phần tử thỏa yêu cầu hay không? *noneMatch* ngược lại
 
-```java
+{% highlight java %}
     boolean anyMatch(Predicate<? super T> predicate);
     boolean allMatch(Predicate<? super T> predicate);
     boolean noneMatch(Predicate<? super T> predicate);
-```
+{% endhighlight %}
 
 - Ví dụ: Kiểm tra list có chưa số lẻ hay không
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     boolean isContainOdd = numbers.stream()
         .anyMatch(x -> x % 2 == 1);
-```
+{% endhighlight %}
 
 ### min(), max()
 
 - Tìm `min`, `max` trong steam
 
-```java
+{% highlight java %}
     Optional<T> min(Comparator<? super T> comparator);
     Optional<T> max(Comparator<? super T> comparator);
-```
+{% endhighlight %}
 
 - Ví dụ: Tìm string dài nhất trong steam
 
-```java
+{% highlight java %}
     Optional<String> minLength = strings.stream()
             .max((x, y) -> (x.length() - y.length()));
-```
+{% endhighlight %}
 
 ### reduce() 
 
 - Kết hợp các phần tử thầnh một giá trị duy nhất
 
-```java
+{% highlight java %}
     Optional<T> reduce(BinaryOperator<T> accumulator);
-```
+{% endhighlight %}
 
 - Ví dụ: Tổng các số trong mảng
 
-```java
+{% highlight java %}
     List<Integer> numbers = Arrays.asList(1, 2, 4 , 3, 7, 3, 5, 2, 6);
 
     int sum = numbers.stream()
         .reduce((x,y) -> x + y).get();
     System.out.println("Sum: " + sum);
-```
+{% endhighlight %}
 
 Output:
 
-```text
+{% highlight text %}
 Sum: 33
-```
+{% endhighlight %}
 
 ### count()
 
 - *count* đếm số phần tử trong mảng
 
-```java
+{% highlight java %}
   long count();
-```
+{% endhighlight %}
 
 
