--- a/_posts/unit-test/2021-10-21-junit5.md
+++ b/_posts/unit-test/2021-10-21-junit5.md
@@ -14,7 +14,7 @@ source: https://github.com/huypva/unit-test-junit5-example
 ## Dependency
 - Thêm dependency trong pom.xml để thực hiện UnitTest
 
-```html
+{% highlight html %}
 <dependencies>
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -22,7 +22,7 @@ source: https://github.com/huypva/unit-test-junit5-example
         <scope>test</scope>
     </dependency>
 </dependencies>
-```
+{% endhighlight %}
 
 Trong Spring Boot version 2.2.6 đã có sẵn thư viện cho junit 5
 
@@ -31,14 +31,14 @@ Trong Spring Boot version 2.2.6 đã có sẵn thư viện cho junit 5
 </div>
 
 Nếu không bạn có thể add thêm dependency như sau   
-```html
+{% highlight html %}
 <dependency>
   <groupId>org.junit.jupiter</groupId>
   <artifactId>junit-jupiter-engine</artifactId>
   <version>5.5.2</version>
   <scope>test</scope>
 </dependency>
-```
+{% endhighlight %}
 
 ## Tạo class Test
 
@@ -51,7 +51,7 @@ Nếu không bạn có thể add thêm dependency như sau
     - Sử dụng ***@Autowired*** để lấy bean class cần test 
     
 Ví dụ  
-```java
+{% highlight java %}
 @ExtendWith(SpringExtension.class)
 @Import(RandomIdProvider.class)
 class RandomIdProviderTest {
@@ -66,7 +66,7 @@ class RandomIdProviderTest {
     assertThat(randomIdProvider.genId()).isLessThan(Integer.MAX_VALUE);
   }
 }
-```
+{% endhighlight %}
 
 ## Tạo method test
 - Quy tắt đặt tên method test
@@ -80,7 +80,7 @@ Ví dụ: greet_HelloWorldWithId1_ReturnGreeting
     - Run method & assertions (Sử dụng org.junit.jupiter.api.Assertions thay cho org.junit.Assert)
 
 Ví dụ  
-```java
+{% highlight java %}
 @Test
 void greet_HelloWorldWithId1_ReturnGreeting() {
   Mockito.when(randomIdProvider.genId()).thenReturn(1);
@@ -90,25 +90,25 @@ void greet_HelloWorldWithId1_ReturnGreeting() {
   Greeting greeting = greetUseCase.greet("World");
   Assertions.assertThat(valueDefault).usingRecursiveComparison().isEqualTo(greeting);
 }
-```
+{% endhighlight %}
 
 ## Assertions
 
 - Assert 2 value  
 
-```java
+{% highlight java %}
 import static org.junit.jupiter.api.Assertions.assertEquals;
 //...
 assertEquals(expectValue, actualValue);
-```
+{% endhighlight %}
 
 - Assert 2 object  
 
-```java
+{% highlight java %}
 import static org.assertj.core.api.Assertions.assertThat;
 //...
 assertThat(expectObject).usingRecursiveComparison().isEqualTo(actualObject);
-```
+{% endhighlight %}
 
 ## Một số lưu ý
 
@@ -117,20 +117,20 @@ assertThat(expectObject).usingRecursiveComparison().isEqualTo(actualObject);
 - Không viết trực tiếp code business logic trong mã test, thay vì đó nên hard code giá trị luôn
 
 Ví dụ: Thay vì  
-```
+{% endhighlight %}
 Assertions.assertEquals(String.format("Msg: %s", param1), sampleObject.getMessage());
-```
+{% endhighlight %}
 nên  
-```
+{% endhighlight %}
 Assertions.assertEquals("Msg abc", sampleObject.getMessage());
-```
+{% endhighlight %}
 
 - Chỉ mock các object/class/bean mà mình viết trong project , không mock third party lib
 
 - Không viết unit test cho các thư viện bên thứ 3
 
 Ví dụ: nếu bạn sử dụng Lombok để generate code getter, setter thì tạo file lombok.config với nội dụng bên dưới để bỏ qua viết unit test  
-```
+{% endhighlight %}
 config.stopBubbling = true
 lombok.addLombokGeneratedAnnotation = true
-```
+{% endhighlight %}
