--- a/_posts/java/2021-10-03-stream.md
+++ b/_posts/java/2021-10-03-stream.md
@@ -79,7 +79,7 @@ Number empty: 2
 
 ### limit()/skip()
 
-- *limit* lấy các phần tử đầu tiên. *skip* bỏ các phần tử đầu tiên.
+- ***limit*** lấy các phần tử đầu tiên. ***skip*** bỏ các phần tử đầu tiên.
 
 {% highlight java %}
   Stream<T> limit(long maxSize);
@@ -222,8 +222,8 @@ Output:
 
 ### anyMatch(), allMatch(), noneMatch()
 
-- *anyMatch* trả về `true` nếu có bất kỳ phần tử nào thỏa điều kiện, ngược lại `false`
-- *allMatch* kiểm tra tất cả phần tử thỏa yêu cầu hay không? *noneMatch* ngược lại
+- ***anyMatch*** trả về ***true*** nếu có bất kỳ phần tử nào thỏa điều kiện, ngược lại **false**
+- ***allMatch*** kiểm tra tất cả phần tử thỏa yêu cầu hay không? ***noneMatch*** ngược lại
 
 {% highlight java %}
     boolean anyMatch(Predicate<? super T> predicate);
@@ -242,7 +242,7 @@ Output:
 
 ### min(), max()
 
-- Tìm `min`, `max` trong steam
+- Tìm ***min***, ***max*** trong steam
 
 {% highlight java %}
     Optional<T> min(Comparator<? super T> comparator);
@@ -282,7 +282,7 @@ Sum: 33
 
 ### count()
 
-- *count* đếm số phần tử trong mảng
+- ***count*** đếm số phần tử trong mảng
 
 {% highlight java %}
   long count();
