Fix bug liquid syntax error

--- a/_posts/java/2021-10-03-stream.md
+++ b/_posts/java/2021-10-03-stream.md
@@ -13,8 +13,7 @@ source: https://github.com/huypva/streams-example
 
 ## Stream pipeline
 
-Bao gồm: 
-
+Bao gồm  
     - 1 stream source
     - 0 hoặc nhiều intermediate operation
     - 1 terminal operation
@@ -41,7 +40,7 @@ Bao gồm:
 
 Output:
 
-{% endhighlight %}
+{% highlight text %}
 1
 2
 4
