--- a/_posts/unit-test/2021-10-21-junit5.md
+++ b/_posts/unit-test/2021-10-21-junit5.md
@@ -117,11 +117,11 @@ assertThat(expectObject).usingRecursiveComparison().isEqualTo(actualObject);
 - Không viết trực tiếp code business logic trong mã test, thay vì đó nên hard code giá trị luôn
 
 Ví dụ: Thay vì  
-{% endhighlight %}
+{% highlight text %}
 Assertions.assertEquals(String.format("Msg: %s", param1), sampleObject.getMessage());
 {% endhighlight %}
 nên  
-{% endhighlight %}
+{% highlight text %}
 Assertions.assertEquals("Msg abc", sampleObject.getMessage());
 {% endhighlight %}
 
@@ -130,7 +130,7 @@ Assertions.assertEquals("Msg abc", sampleObject.getMessage());
 - Không viết unit test cho các thư viện bên thứ 3
 
 Ví dụ: nếu bạn sử dụng Lombok để generate code getter, setter thì tạo file lombok.config với nội dụng bên dưới để bỏ qua viết unit test  
-{% endhighlight %}
+{% highlight text %}
 config.stopBubbling = true
 lombok.addLombokGeneratedAnnotation = true
 {% endhighlight %}
